--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           
         </div>
         <div class="about-image">
-            <img src=".abel.jpg" alt="Mission Image" />
+            <img src="./abel.jpg" alt="Mission Image" />
         </div>
     </section>
     
