--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
                 I am driven by a mission to leverage technology to ve real-world problems
                  and to inspire others to unlock their potential in the digital age. If you’re
                   looking for a dedicated developer who thrives on challenges and collaboration, I’d love to connect!
+
+                 <div style="background-color: rgb(209, 47, 47); padding :10px; border-radius: 8px;">
+                <a href="./Modern Minimalist CV Resume.pdf"> VIEW MY CV </a>
+               </div>
             </p>
           
         </div>
