--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                   looking for a dedicated developer who thrives on challenges and collaboration, I’d love to connect!
 
                  <div style="background-color: rgb(209, 47, 47); padding :10px; border-radius: 8px;">
-                <a href="./Modern Minimalist CV Resume.pdf"> VIEW MY CV </a>
+                <a href="./Abel Developer Resume.pdf"> VIEW MY CV </a>
                </div>
             </p>
           
