--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                  and to inspire others to unlock their potential in the digital age. If you’re
                   looking for a dedicated developer who thrives on challenges and collaboration, I’d love to connect!
 
-                 <div style="background-color: rgb(209, 47, 47); padding :10px; border-radius: 8px;">
+                 <div style="background-color: #3b3f79; padding :10px; border-radius: 8px;">
                 <a href="./Abel Developer Resume.pdf"> VIEW MY CV </a>
                </div>
             </p>
